snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.md5
fb6df5bb29d37f7278c420f541e8c0df